# freedom-e-cmake-boilerplate

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  motor_movement.c  only_build.sh  riscv_toolchain.cmake  upload.sh
docs/: build_output.txt  compilation.md
src/: motor_movement.c
tools/: build_upload.sh
